[package]
name = "s3fs"
version = "0.1.0"
edition = "2021"

[dependencies]
s3s-fs = "0.11.0"
s3s = "0.11.0"
tokio = { version = "1.44", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
